# trading_implementation

./: README.md  main.py
Giacomo/Birkbeck/Financial Data Science with Python/trading_implementation/: pyproject.toml
Giacomo/Birkbeck/Financial Data Science with Python/trading_implementation/model/: model.py
