[tool.poetry]
name = "trading_implementation"
version = "0.1.0"
description = "A study into the enhanced efficiency of standard trading techniques using machine learning"
authors = ["Giacomo Rognoni"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = '1.4.1'
pandas_datareader = '0.10.0'
matplotlib = '3.5.1'
statsmodels = '0.13.2'
sklearn = '*'
tensorflow = '2.8.0'
keras = '2.8.0'

[tool.poetry.dev-dependencies]
pytest  = '7.0.1'
black  = '22.1.0'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
